--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions"]
 	path = zsh/oh-my-zsh/custom/plugins/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
 [submodule "zsh/oh-my-zsh/custom/plugins/zsh-autocomplete"]
 	path = zsh/oh-my-zsh/custom/plugins/zsh-autocomplete
 	url = https://github.com/marlonrichert/zsh-autocomplete.git
 [submodule "zsh/oh-my-zsh/custom/plugins/fast-syntax-highlighting"]
 	path = zsh/oh-my-zsh/custom/plugins/fast-syntax-highlighting
 	url = https://github.com/zdharma-continuum/fast-syntax-highlighting.git
-[submodule "/Users/qba/.config/zsh/oh-my-zsh/custom/plugins/zsh-completions"]
-	path = /Users/qba/.config/zsh/oh-my-zsh/custom/plugins/zsh-completions
-	url = https://github.com/clarketm/zsh-completions
+[submodule "zsh/oh-my-zsh/custom/plugins/zsh-completions"]
+	path = zsh/oh-my-zsh/custom/plugins/zsh-completions
+	url = https://github.com/clarketm/zsh-completions.git
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/QinBa/nvim.git
