nvim-kitty-navigation

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -725,7 +725,7 @@ draw_minimal_borders yes
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 2
+window_padding_width 0 2 1
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -760,7 +760,7 @@ active_border_color none
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS,  can be used to only hide the titlebar.
@@ -2175,7 +2175,7 @@ map kitty_mod+f toggle_fullscreen
 
 #: Reload kitty.conf
 
-map ctrl+cmd+,   load_config_file
+# map ctrl+cmd+,   load_config_file
 
 #::  Reload kitty.conf, applying any changes since the last time it
 #::  was loaded. Note that a handful of options cannot be dynamically
@@ -2236,3 +2236,18 @@ map ctrl+cmd+,   load_config_file
 #: }}}
 
 #: }}}
+
+# Kittens {{{
+# include all configs for custom kittensk
+# vim-kitty-navigation {{{
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+# Make kitty listen to control messages
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
+# }}}
+# }}}
+
