--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -839,7 +839,7 @@ active_border_color none
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge bottom
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -2090,7 +2090,7 @@ map kitty_mod+l>p last_used_layout
 
 #: Toggle fullscreen
 
-map kitty_mod+f toggle_fullscreen
+# map kitty_mod+f toggle_fullscreen
 
 #: Toggle maximized
 
